Add Triangle.NET integration and Phase 2 world-building specs
- Integrate Triangle.NET via project reference for high-quality mesh generation
- Add TriangleNetAdapter for clean interface to Triangle.NET
- Create 10 comprehensive specs for Phase 2 world-building features:
  * Spec 006: Burgs (Settlement System)
  * Spec 007: States (Political System)
  * Spec 008: Cultures System
  * Spec 009: Religions System
  * Spec 010: Provinces System
  * Spec 011: Routes System
  * Spec 012: Markers System
  * Spec 013: Military System
  * Spec 014: Name Generation System
  * Spec 015: Zones System
- Add comprehensive documentation:
  * Triangle.NET integration guide
  * Geometry libraries strategy (Triangle.NET + NTS)
  * Library recommendations and comparisons
  * Phase 2 roadmap and completion tracking
- Update project references and build configuration

Triangle.NET provides quality-constrained Delaunay triangulation and works
complementarily with NetTopologySuite for complete geometry solution.

--- a/src/FantasyMapGenerator.Core/FantasyMapGenerator.Core.csproj
+++ b/src/FantasyMapGenerator.Core/FantasyMapGenerator.Core.csproj
@@ -13,4 +13,8 @@
     <PackageReference Include="NetTopologySuite.IO.GeoJSON" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\ref-projects\Triangle.NET\src\Triangle\Triangle.csproj" />
+  </ItemGroup>
+
 </Project>
