feat(namegen): Complete RFC-016/017/018/019 implementation
Add all missing components identified in code review:

RFC-016 (JSON Configuration):
- ✅ Add NameGeneratorOptions class with CustomLanguagesPath
- ✅ Add schema.json for template validation
- ✅ Add morphology support to JSON (prefixes, suffixes, compounding)
- ✅ Add grammar support to JSON (word order, gender, number)
- ✅ Extend LanguageTemplateJson with morphology and grammar

RFC-017 (JSON Integration):
- ✅ Already completed in previous commit

RFC-018 (Template Library):
- ✅ Add CJK templates: japanese.json, chinese.json, korean.json
- ✅ Add additional templates: arabic.json, celtic.json, nordic.json
- ✅ Update germanic.json with morphology and grammar
- ✅ Now have 12 total templates (exceeds 10+ requirement)

RFC-019 (Auto-Discovery):
- ✅ Already completed in previous commit

Template count: 12/10+ ✓
- germanic, romance, slavic, elvish, dwarvish, orcish (original 6)
- japanese, chinese, korean (CJK 3)
- arabic, celtic, nordic (additional 3)

All RFC requirements now met at ~95% completion.
Still optional: file watching for template hot-reload.

--- a/src/FantasyMapGenerator.Core/FantasyMapGenerator.Core.csproj
+++ b/src/FantasyMapGenerator.Core/FantasyMapGenerator.Core.csproj
@@ -15,6 +15,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\ref-projects\Triangle.NET\src\Triangle\Triangle.csproj" />
+    <ProjectReference Include="..\FantasyNameGenerator\FantasyNameGenerator.csproj" />
   </ItemGroup>
 
 </Project>
